// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary passes through if non-error 1`] = `
<div
  className="heroPage defaultPadding"
>
  <div
    className="icon"
  >
    <ErrorIcon />
  </div>
  <div
    className="title"
  >
    Error
  </div>
  <div
    className="subtitle"
    data-testid="hero-page-subtitle"
  >
    <div
      className="container"
    >
      <p>
        Sourcegraph encountered an unexpected error. If reloading the page doesn't fix it, contact your site admin or Sourcegraph support.
      </p>
      <p>
        <code
          className="text-wrap"
        >
          x
        </code>
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorBoundary renders error page if error 1`] = `
<span>
  hello
</span>
`;

exports[`ErrorBoundary renders reload page if chunk error 1`] = `
<div
  className="heroPage defaultPadding"
>
  <div
    className="icon"
  >
    <ErrorIcon />
  </div>
  <div
    className="title"
  >
    Error
  </div>
  <div
    className="subtitle"
    data-testid="hero-page-subtitle"
  >
    <div
      className="container"
    >
      <p>
        Sourcegraph encountered an unexpected error. If reloading the page doesn't fix it, contact your site admin or Sourcegraph support.
      </p>
      <p>
        <code
          className="text-wrap"
        >
          Loading chunk 123 failed.
        </code>
      </p>
    </div>
  </div>
</div>
`;
